--- a/address-book-backend/package.json
+++ b/address-book-backend/package.json
@@ -10,6 +10,7 @@
     "clean-css": "^4.2.3",
     "constantinople": "^3.1.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
