--- a/address-book-frontend/package.json
+++ b/address-book-frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.2",
     "cross-fetch": "^3.0.4",
     "font-awesome": "^4.7.0",
