--- a/address-book-backend/package.json
+++ b/address-book-backend/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.18",
     "mongoose-unique-array": "^0.3.4",
     "mongoose-unique-validator": "^2.0.3",
